Fixed display of collapsed note over multiple blocks

--- a/src/skins/gu-noting.less
+++ b/src/skins/gu-noting.less
@@ -71,7 +71,8 @@
 }
 
 
-.note--start.note--end {
+.note--start.note--end,
+.note--start.note--collapsed {
     background-image: @note-border-left-url, @note-border-right-url;
     background-size: 0.5em, 0.5em;
     background-position: top left, bottom right;
